src/c/compat/rcompat.h

/* -------------------------------------------------------------------------
 * the object model.
 * ------------------------------------------------------------------------- */

/* type tags: the numeric values match R's so that any stray comparison against
 * a literal keeps working. */
typedef enum {
  NILSXP  =  0,
  SYMSXP  =  1,
  LISTSXP =  2,
  CLOSXP  =  3,   /* wraps a Python callable. */
  LANGSXP =  6,
  CHARSXP =  9,
  LGLSXP  = 10,
  INTSXP  = 13,
  REALSXP = 14,
  STRSXP  = 16,
  VECSXP  = 19
} SEXPTYPE;
typedef struct SEXPREC *SEXP;
typedef struct SEXPATTRIB {
  SEXP name;                  /* a SYMSXP. */
  SEXP value;
  struct SEXPATTRIB *next;
} SEXPATTRIB;
struct SEXPREC {

  int sxptype;
  int len;

  union {
    int    *i;                /* LGLSXP, INTSXP. */
    double *d;                /* REALSXP. */
    char   *c;                /* CHARSXP, SYMSXP. */
    SEXP   *v;                /* STRSXP (of CHARSXP), VECSXP. */
    struct { SEXP car, cdr; } cons;   /* LISTSXP, LANGSXP. */
    void   *ptr;              /* CLOSXP: a borrowed PyObject *. */
  } u;

  SEXPATTRIB *attrib;

  /* every object is linked into a per-call arena and released wholesale when
   * the call returns; `preserved` opts an object out of that. */
  struct SEXPREC *arena_next;
  int preserved;

};
/* -------------------------------------------------------------------------
 * constants.
 * ------------------------------------------------------------------------- */

extern SEXP R_NilValue;
extern SEXP R_NamesSymbol;
extern SEXP R_ClassSymbol;
extern SEXP R_LevelsSymbol;
extern SEXP R_RowNamesSymbol;
#define NA_INTEGER  INT_MIN
/* -------------------------------------------------------------------------
 * accessors.  these are macros for the same reason they are in R: they sit in
 * the innermost loops of the scoring and independence-test code.
 * ------------------------------------------------------------------------- */

#define TYPEOF(x)   ((x)->sxptype)
#define INTEGER(x)  ((x)->u.i)
#define LOGICAL(x)  ((x)->u.i)
#define REAL(x)     ((x)->u.d)
#define CHAR(x)     ((const char *)((x)->u.c))
SEXP Rf_allocVector(SEXPTYPE type, int n);
int  Rf_length(SEXP x);
SEXP Rf_STRING_ELT(SEXP x, int i);
void Rf_SET_STRING_ELT(SEXP x, int i, SEXP v);
SEXP Rf_VECTOR_ELT(SEXP x, int i);
void Rf_SET_VECTOR_ELT(SEXP x, int i, SEXP v);
/* -------------------------------------------------------------------------
 * construction, coercion and type predicates.
 * ------------------------------------------------------------------------- */

SEXP Rf_mkChar(const char *s);
SEXP Rf_mkString(const char *s);
SEXP Rf_ScalarReal(double x);
SEXP Rf_ScalarInteger(int x);
SEXP Rf_ScalarLogical(int x);
/* -------------------------------------------------------------------------
 * attributes and symbols.
 * ------------------------------------------------------------------------- */

SEXP Rf_getAttrib(SEXP x, SEXP name);
SEXP Rf_setAttrib(SEXP x, SEXP name, SEXP value);
/* arena control, called from the Cython layer around each entry point. */
void pybn_arena_push(void);
void pybn_arena_pop(void);
#define length        Rf_length
#define error         Rf_error