src/c/compat/rcompat_internal.h

/* set up the constants and the symbol table; idempotent. */
void pybn_init_constants(void);
const char *pybn_error_message(void);
/* warnings are collected rather than emitted, so the binding layer can turn
 * them into Python warnings once the call has returned. */
int         pybn_warning_count(void);
const char *pybn_warning_at(int i);
void        pybn_clear_warnings(void);
/* Rprintf() output is buffered here and flushed to Python's sys.stdout by the
 * binding layer; bnlearn writes a lot of it when debug = TRUE. */
const char *pybn_output_buffer(void);
void        pybn_clear_output(void);